--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -14,7 +14,9 @@
 
       <nav class="navbar navbar-expand-lg bg-light">
           <div class="container-fluid">
-            <img src="{% static "portfolio/logo.png" %}" height="50">
+            <a href="{% url 'home' %}">
+                <img src="{% static "portfolio/logo.png" %}" height="50">
+            </a>
             <a class="navbar-brand" href="{% url 'home' %}">&nbsp;semenov4jr</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
