--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -15,7 +15,7 @@
     </h1>
     <br>
 
-    <h2>Portfolio</h2>
+    <h2>My Projects</h2>
     <hr>
 
     <div class="row">
@@ -23,7 +23,7 @@
         <div class="col-lg-4 col-md-6">
             <h2>{{ project.title }}</h2>
             <p>{{ project.description }}</p>
-            <img src="{{ project.image.url }}" height="300" width="420">
+            <img src="{{ project.image.url }}" height="300" width="500">
             {% if project.url %}
             <br><a href="{{ project.url }}">Link</a>
             {% endif %}
