--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -7,7 +7,7 @@
     <h1>
         <center>
             <img src="{% static 'portfolio/photo.jpg' %}" height="500"><br>
-            Hello, my dear friend! This is my portfolio!<br> I live in Moscow and I love programming!
+            Hello, my dear friend! This is my portfolio.<br> I live in Moscow and I love programming!
             <p><a href="{% url 'blog:all_blogs' %}" class="btn btn-info">Blog</a>
             &nbsp&nbsp&nbsp
             <a href="{% static 'portfolio/Resume.pdf' %} " class="btn btn-info">Resume</a></p>
